--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,6 @@ ext {
 	set('snippetsDir', file("build/generated-snippets"))
 }
 
-
 configurations {
 	asciidoctorExtensions
 }
@@ -26,20 +25,20 @@ dependencies {
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
+	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.mapstruct:mapstruct:1.5.1.Final'
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.1.Final'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-
 	implementation 'com.google.code.gson:gson'
 }
 
-// (6)
+tasks.named('test') {
+	useJUnitPlatform()
+}
+
 tasks.named('test') {
 	outputs.dir snippetsDir
 	useJUnitPlatform()
@@ -52,6 +51,7 @@ tasks.named('asciidoctor') {
 
 task copyDocument(type: Copy) {
 	dependsOn asciidoctor
+	println "asciidoctor output: ${asciidoctor.outputDir}"
 	from file("${asciidoctor.outputDir}")
 	into file("src/main/resources/static/docs")
 }
